--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 			</li>
 			<li><h3>Haagse Hoge School</h3><img src="images/HHS.png"><span>
 								During my internshipping we made a new schedule module for the Haagse Hoge School.
-								Whit this application the students can make their own schedule.</span>
+								Whith this application the students can make their own schedule.</span>
 			</li>
 		</ul>
 	</section>
