--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
  <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
 	<head>
 		<title>Portfolio Oussama Laghmouchi</title>
 		<meta charset="utf-8" />
@@ -22,7 +22,7 @@
 	
 	<div class="about">
 		
-		<h2><a>About</a></h2>
+		<h2>About</h2>
 			<p>
 				My name is Oussama Laghmouchi. I'm 19 years old.
 				My hobby is playing football. I'm a student of the ROC Mondriaan
@@ -48,7 +48,7 @@
 	<div class="photo">
 	</div>
 	<div class="skills">
-		<h2><a href="#nav">Skills</a></h2>
+		<h2>Skills</h2>
 		<ul>
 			<li>
 				<img src="images/html.png">
@@ -78,7 +78,7 @@
 	</div>
 	
 	<div class="project">
-		<h2><a href="#nav">My Experience</a></h2>
+		<h2>My Experience</h2>
 		<ul>
 			<li><h3>Hoger Lager</h3><img class="hoverImage" src="images/hogerlager.png"><span>
 								This is a school project. 
@@ -117,7 +117,7 @@
 	</div>
 	
 	<div class="contact">
-		<h2><a href="#nav">Contact</a></h2>
+		<h2>Contact</h2>
 		<span class="warningMessage"></span>
 		<form name="contactForm">
 			<table>
