Navigation is working

--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
 
 	<nav>
 		<ul>
-			<li><a>About</a></li>
-			<li><a>Skills</a></li>
-			<li><a>My Experience</a></li>
-			<li><a>Contact</a></li>
+			<li onclick= "scrollToSkills()"><a>Skills</a></li>
+			<li onclick= "scrollToExp()"><a>My Experience</a></li>
+			<li onclick= "scrollToContact()"><a>Contact</a></li>
 		</ul>
 	</nav>
 	
