Feedback erin verwertk

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 	<nav>
 		<ul>
-			<li onclick= "scrollToSkills()"><a>Skills</a></li>
-			<li onclick= "scrollToExp()"><a>My Experience</a></li>
-			<li onclick= "scrollToContact()"><a>Contact</a></li>
+			<li onclick= "scrollToSkills()"><span>Skills</span></li>
+			<li onclick= "scrollToExp()"><span>My Experience</span></li>
+			<li onclick= "scrollToContact()"><span>Contact</span></li>
 		</ul>
 	</nav>
 	
@@ -37,7 +37,7 @@
 				<li>Residence: 		 The Hague</li> 
 				<li>E-mail:			 o.laghmouchi@gmail.com</li>
 				<li>Birthplace:		 The Hague</li>
-				<li>Sex:			 Male</li>
+				<li>Gender:			 Male</li>
 				<li>Nationality:	 Netherlands</li>
 				<li>Driving license: Yes</li>
 				<li><a href="mailto:o.laghmouchi@gmail.com?subject=portfolio">Click here to mail me</a></li>	
